Began testing multiple fit method

--- a/New_Calibration_Testing.ipynb
+++ b/New_Calibration_Testing.ipynb
@@ -53,83 +53,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mueller matrix for a linear polarizer, with angle a between transmission axis and horizontal (radians)\n",
-    "def linear_polarizer(a):\n",
-    "    M01 = np.cos(2*a)\n",
-    "    M02 = np.sin(2*a)\n",
-    "    M10 = np.cos(2*a)\n",
-    "    M11 = np.cos(2*a)**2\n",
-    "    M12 = np.cos(2*a)*np.sin(2*a)\n",
-    "    M20 = np.sin(2*a)\n",
-    "    M21 = np.cos(2*a)*np.sin(2*a)\n",
-    "    M22 = np.sin(2*a)**2\n",
-    "\n",
-    "    return 0.5*np.array([[1, M01, M02, 0], \n",
-    "                         [M10, M11, M12, 0], \n",
-    "                         [M20, M21, M22, 0], \n",
-    "                         [0, 0, 0, 0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mueller matrix for a linear retarder (waveplate). Angle of fast axis a, retardance r in radians\n",
-    "def linear_retarder(a, r):\n",
-    "    M11 = np.cos(2*a)**2 + np.cos(r)*np.sin(2*a)**2\n",
-    "    M12 = np.cos(2*a)*np.sin(2*a)*(1-np.cos(r))\n",
-    "    M13 = -np.sin(2*a)*np.sin(r)\n",
-    "    M21 = M12\n",
-    "    M22 = np.sin(2*a)**2 + np.cos(2*a)**2*np.cos(r)\n",
-    "    M23 = np.cos(2*a)*np.sin(r)\n",
-    "    M31 = -M13\n",
-    "    M32 = -M23\n",
-    "    M33 = np.cos(r)\n",
-    "\n",
-    "    return np.array([[1, 0, 0, 0], \n",
-    "                     [0, M11, M12, M13], \n",
-    "                     [0, M21, M22, M23], \n",
-    "                     [0, M31, M32, M33]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sorting function for extracting filenames based on last number in the filename (the angle of rotation)\n",
-    "def extract_number(filename):\n",
-    "    match = re.findall(r'\\d+(?:\\.\\d+)?', filename)\n",
-    "    if match:\n",
-    "        return float(match[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Gives the condition number of eventual Mueller matrix (made by Jaren)\n",
-    "def condition_number(matrix):\n",
-    "    minv = np.linalg.pinv(matrix)\n",
-    "\n",
-    "    # Compute maximum norm\n",
-    "    norm = np.linalg.norm(matrix, ord=np.inf)\n",
-    "    ninv = np.linalg.norm(minv, ord=np.inf)\n",
-    "\n",
-    "    return norm*ninv"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
@@ -1048,26 +971,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 0 0 0]\n",
-      " [0 1 0 0]\n",
-      " [0 0 1 0]\n",
-      " [0 0 0 1]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(M_identity)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [
@@ -1474,6 +1377,274 @@
    ],
    "source": [
     "np.abs((upper_retardance-lower_retardance)/2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Work on modifying the fitting method so that the initial guess has some randomization. Then perform multiple fits and choose the one with the lowest error in the calibration matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1600nm_550_1.8_95.99994140624999.fits, index: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calibration for 1600 nm\n",
+    "reduced_filename = 'Reduced_DRRP_'\n",
+    "#reduced_folder = r\"C:\\\\Users\\\\EPL User\\\\Desktop\\\\L_Plate_Characterization\\\\Calibration\\\\Calibration_Reduced\\\\Cal_1600_Reduced\\\\\"\n",
+    "reduced_folder = \"/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1600_Reduced/\"\n",
+    "lcenter = [258, 255]\n",
+    "rcenter = [258, 332]\n",
+    "maxradius = 10\n",
+    "cutoff = 5000\n",
+    "\n",
+    "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
+    "Cal_Il_1600 = extracted_data[0]\n",
+    "Cal_Ir_1600 = extracted_data[1]\n",
+    "Cal_theta1600 = extracted_data[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# offset in angle will be between 0 and 25 degrees (convert to radians)\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.06859352093443166\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_number1 = random.uniform(-0.4, 0.4)\n",
+    "print(random_number1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16666666666666666"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.pi/3/(2*np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add randomization to the initial guesses\n",
+    "def q_calibration_fitting(cal_angles, cal_left_intensity, cal_right_intensity):\n",
+    "    QCal = cal_right_intensity - cal_left_intensity # Plus should be the right spot, minus the left spot\n",
+    "    initial_guess = [random.uniform(-0.5, 0.5), random.uniform(-0.5, 0.5), random.uniform(-0.5, 0.5), random.uniform(-np.pi/3, np.pi/3), random.uniform(-np.pi/3, np.pi/3)]\n",
+    "    parameter_bounds = ([-np.pi, -np.pi, -np.pi, -np.pi/2, -np.pi/2], [np.pi, np.pi, np.pi, np.pi/2, np.pi/2])\n",
+    "\n",
+    "    # Find parameters from calibration of the left spot\n",
+    "    normalized_QCal = QCal/(max(QCal))\n",
+    "    popt, pcov = curve_fit(q_calibration_function, cal_angles, normalized_QCal, p0=initial_guess, bounds=parameter_bounds)\n",
+    "    #print(popt, \"Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\")\n",
+    "\n",
+    "    # The calibration matrix (should be close to identity) to see how well the parameters compensate\n",
+    "    MCal = q_calibrated_full_mueller_polarimetry(cal_angles, popt[0], popt[1], popt[2], popt[3], popt[4], cal_left_intensity, cal_right_intensity)\n",
+    "    MCal = MCal/np.max(np.abs(MCal))\n",
+    "    RMS_Error = RMS_calculator(MCal)\n",
+    "    #print(RMS_Error, \"RMS error of the calibration matrix\")\n",
+    "    return popt, RMS_Error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.01760296  0.00679313 -0.09806016 -0.06056649 -0.06369491] Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\n",
+      "0.011000776089360826 RMS error of the calibration matrix\n",
+      "0.011000776089360826\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_parameters = q_calibration_fitting(Cal_theta1600, Cal_Il_1600, Cal_Ir_1600)\n",
+    "print(test_parameters[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.011000022536123574"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_calibration_fitting(Cal_theta1600, Cal_Il_1600, Cal_Ir_1600)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "splat = np.zeros([4,4])\n",
+    "print(splat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "splat[0,1] = 1\n",
+    "print(splat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "splat3 = [1, 2, 3]\n",
+    "print(splat3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;31mTypeError\u001b[0m: float() argument must be a string or a number, not 'list'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[98], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m splat2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros([\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m3\u001b[39m])\n\u001b[0;32m----> 2\u001b[0m \u001b[43msplat2\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m splat3\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(splat2)\n",
+      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence."
+     ]
+    }
+   ],
+   "source": [
+    "splat2 = np.zeros([10, 3])\n",
+    "splat2[3] = splat3\n",
+    "print(splat2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([-0.01758995,  0.00682298, -0.0980498 , -0.06058391, -0.06370737]), array([-0.01759912,  0.00683006, -0.09805408, -0.06065043, -0.06374699]), array([-0.01759668,  0.00680992, -0.09805973, -0.0606001 , -0.06369143]), array([-0.01760248,  0.00680316, -0.09805653, -0.06061697, -0.06371056]), array([-0.01759601,  0.00681125, -0.0980571 , -0.0606019 , -0.06369968]), array([-0.01760823,  0.00680809, -0.09805934, -0.06059269, -0.06368841]), array([-0.01758864,  0.00681703, -0.09805838, -0.06058079, -0.0637043 ]), array([-0.01757462,  0.00680261, -0.09805477, -0.06063262, -0.06365823]), array([-0.01760123,  0.00680388, -0.09806782, -0.06062525, -0.06370319]), array([-0.01759526,  0.00681322, -0.0980544 , -0.06060169, -0.06369611])] [[0.01100306]\n",
+      " [0.01100307]\n",
+      " [0.01100538]\n",
+      " [0.01100516]\n",
+      " [0.01100232]\n",
+      " [0.01100216]\n",
+      " [0.01100279]\n",
+      " [0.01100285]\n",
+      " [0.01100097]\n",
+      " [0.01100261]]\n",
+      "[-0.01759912  0.00683006 -0.09805408 -0.06065043 -0.06374699]\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters = []\n",
+    "RMS_errors = np.zeros([10, 1])\n",
+    "for i in range(0, 10):\n",
+    "    parameters.append(q_calibration_fitting(Cal_theta1600, Cal_Il_1600, Cal_Ir_1600)[0])\n",
+    "    RMS_errors[i, 0] = (q_calibration_fitting(Cal_theta1600, Cal_Il_1600, Cal_Ir_1600)[1])\n",
+    "print(parameters, RMS_errors)\n",
+    "print(parameters[1])"
    ]
   },
   {
