--- a/SuperK_Select_Data/L_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/L_SuperK_Analysis.ipynb
@@ -2,11 +2,133 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0, '/home/wcmelby/Library/Python/wcmelby-HWP_Characterizations/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from New_DRRP_Functions import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This data is taken with the L band plate using the SuperK Select laser operating with main power at 5%, specific channel power at 40%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bring in old calibration data from 1600 nm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1600nm_550_1.8_95.99994140624999.fits, index: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "reduced_filename = 'Reduced_DRRP_'\n",
+    "reduced_folder = \"/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1600_Reduced/\"\n",
+    "lcenter = [258, 255]\n",
+    "rcenter = [258, 332]\n",
+    "maxradius = 10\n",
+    "cutoff = 5000\n",
+    "\n",
+    "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
+    "Cal_Il_1600 = extracted_data[0]\n",
+    "Cal_Ir_1600 = extracted_data[1]\n",
+    "Cal_theta1600 = extracted_data[2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1600 nm SK data, 550 fps, 1.8 ms tint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1600nm_550_1.8_75.99995361328125.fits, index: 19\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1600nm_550_1.8_87.99994628906249.fits, index: 22\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1600nm_550_1.8_123.99992431640624.fits, index: 31\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1600nm_550_1.8_151.9999072265625.fits, index: 38\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1600nm_550_1.8_175.99989257812499.fits, index: 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "reduced_filename = 'Reduced_DRRP_'\n",
+    "reduced_folder = \"/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/SuperK_Select_Data/Reduced_Data/Reduced_L_1600/\"\n",
+    "lcenter = [268, 268]\n",
+    "rcenter = [268, 344]\n",
+    "maxradius = 20\n",
+    "cutoff = 50000\n",
+    "\n",
+    "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
+    "Il_1600 = extracted_data[0]\n",
+    "Ir_1600 = extracted_data[1]\n",
+    "theta1600 = extracted_data[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.01759579  0.00681734 -0.09805524 -0.0606004  -0.06370183] Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\n",
+      "[[ 1.         -0.06595228 -0.02878104 -0.03431258]\n",
+      " [-0.12955048  0.45162711  0.69362668  0.4560967 ]\n",
+      " [-0.03806443  0.85609436  0.1325827  -0.63012746]\n",
+      " [ 0.04001776 -0.44943106  0.6828269  -0.51645052]] This is the Mueller matrix of the sample waveplate\n",
+      "0.3363734970283314 This is the retardance of the sample\n",
+      "[[ 0.86450084  0.00146352 -0.00168123  0.00100436]\n",
+      " [-0.07626512  0.92245186 -0.00833132  0.00215554]\n",
+      " [ 0.01652496  0.02132442  1.          0.00030956]\n",
+      " [ 0.0009802   0.00039263 -0.00111538  0.86456637]] This is the Mueller matrix for calibration (close to identity)\n",
+      "0.011002891852251768 This is the RMS error in the calibration matrix\n",
+      "[0.0020371880791326125, 0.0020530386598775485] This is the retardance error in the sample waveplate\n"
+     ]
+    }
+   ],
+   "source": [
+    "data1600 = q_ultimate_polarimetry(Cal_theta1600, Cal_Il_1600, Cal_Ir_1600, theta1600, Il_1600, Ir_1600)\n",
+    "print(data1600[0], \"This is the Mueller matrix of the sample waveplate\")\n",
+    "print(data1600[1], \"This is the retardance of the sample\")\n",
+    "print(data1600[2], \"This is the Mueller matrix for calibration (close to identity)\")\n",
+    "print(data1600[3], \"This is the RMS error in the calibration matrix\")\n",
+    "print(data1600[4], \"This is the retardance error in the sample waveplate\")"
    ]
   },
   {
@@ -18,8 +140,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
