--- a/SuperK_Select_Data/L_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/L_SuperK_Analysis.ipynb
@@ -1262,6 +1262,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.99832915 -0.01121512 -0.09147972 -0.04260057]\n",
+      " [-0.04413663  0.73931208  0.43282716  0.00562301]\n",
+      " [ 0.11707543  0.19884792  1.          0.04210994]\n",
+      " [-0.0827423   0.07475683  0.0318913   0.87623415]]\n",
+      "0.14819316472834299\n"
+     ]
+    }
+   ],
+   "source": [
+    "uncalibrated = q_calibrated_full_mueller_polarimetry(Cal_theta1750, 0, 0, 0, 0, 0, Cal_Il_1750, Cal_Ir_1750, M_in=None)\n",
+    "uncalibrated = uncalibrated/np.max(np.abs(uncalibrated))\n",
+    "print(uncalibrated)\n",
+    "print(RMS_calculator(uncalibrated))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1335,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1700,7 @@
     "plt.grid(True)\n",
     "\n",
     "folder_path = \"/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/SuperK_Select_Data/\"\n",
-    "file_name = '5_10_L_Band_HWP_Retardance.png'\n",
+    "file_name = '5_15_L_Band_HWP_Retardance.png'\n",
     "#plt.savefig(folder_path + file_name, bbox_inches='tight', dpi=300)"
    ]
   },
