Added an example and more explanations

--- a/L_Plate_Analysis.ipynb
+++ b/L_Plate_Analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: this version is outdated. This was the original attempt to characterize the L plate using measurements of I rather than Q (new method)\n",
+    "The comparison between the two mehtods is shown in the newer files that use the SuperK SELECT laser rather than the Thorlabs broadband lamp"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
