--- a/New_Calibration_Testing.ipynb
+++ b/New_Calibration_Testing.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is to test changes in the calibration method and ways to include it. \n",
+    "To do: implement a way to randomize different sets for the initial calibration parameter guess and choose the set that gives the best results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
