Added I reduction to new DRRP Functions

--- a/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
@@ -17,7 +17,7 @@
     "sys.path.insert(0, '../../operational_scripts')\n",
     "\n",
     "# from New_DRRP_Functions import *\n",
-    "from New_DRRP_Functions import extract_intensities, q_ultimate_polarimetry"
+    "from New_DRRP_Functions import extract_intensities, q_ultimate_polarimetry, I_ultimate_polarimetry"
    ]
   },
   {
@@ -767,6 +767,75 @@
     "    print(data_example[5], \"Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\")\n",
     "else:\n",
     "    print(f\"No polarimetry data available for wavelength {example_wl}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I data reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multi_analysis(wavelengths, method):\n",
+    "    \"\"\"\n",
+    "    Specify data reduction method as 'I' or 'q'. Input wavelengths as a list, like [1400, 1500, 1600]. \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Dictionary to store results for each wavelength\n",
+    "    polarimetry_results = {}\n",
+    "\n",
+    "    # Loop over the wavelengths\n",
+    "    for wl in wavelengths:\n",
+    "        # Retrieve extracted data (ensure it has been stored in the `results` dictionary as discussed earlier)\n",
+    "        Cal_theta = cal_results.get(f'Cal_theta{wl}', np.array([]))\n",
+    "        Cal_Il = cal_results.get(f'Cal_Il_{wl}', np.array([]))\n",
+    "        Cal_Ir = cal_results.get(f'Cal_Ir_{wl}', np.array([]))\n",
+    "\n",
+    "        theta = sample_results.get(f'theta{wl}', np.array([]))\n",
+    "        Il = sample_results.get(f'Il_{wl}', np.array([]))\n",
+    "        Ir = sample_results.get(f'Ir_{wl}', np.array([]))\n",
+    "\n",
+    "        # Flags for missing data\n",
+    "        calibration_data_missing = any(len(arr) == 0 for arr in [Cal_theta, Cal_Il, Cal_Ir])\n",
+    "        waveplate_data_missing = any(len(arr) == 0 for arr in [theta, Il, Ir])\n",
+    "\n",
+    "        # Check missing data and print appropriate message\n",
+    "        if calibration_data_missing:\n",
+    "            print(f\"Missing calibration data for wavelength {wl}, skipping...\")\n",
+    "\n",
+    "        if waveplate_data_missing:\n",
+    "            print(f\"Missing waveplate sample data for wavelength {wl}, skipping...\")\n",
+    "\n",
+    "        # Skip processing if any data is missing\n",
+    "        if calibration_data_missing or waveplate_data_missing:\n",
+    "            continue\n",
+    "\n",
+    "        # Run the `I_ultimate_polarimetry` function\n",
+    "        if method == 'I':\n",
+    "            data = I_ultimate_polarimetry(Cal_theta, Cal_Il, Cal_Ir, theta, Il, Ir)\n",
+    "        elif method == 'q':\n",
+    "            data = q_ultimate_polarimetry(Cal_theta, Cal_Il, Cal_Ir, theta, Il, Ir)\n",
+    "        else:\n",
+    "            print(\"Invalid method specified. Please choose 'I' or 'q'.\")\n",
+    "            return\n",
+    "\n",
+    "        # Store the result for the current wavelength\n",
+    "        polarimetry_results[wl] = data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multi_analysis(wavelengths, 'I')"
    ]
   },
   {
